package visitor.examples.intrusive;

public abstract class Expression {
    public abstract void print(StringBuilder sb);
}
