@startuml

title __INTRUSIVE's Class Diagram__\n

  namespace visitor.examples.intrusive {
    class visitor.examples.intrusive.AdditionExpression {
        + AdditionExpression()
        + print()
    }
  }
  

  namespace visitor.examples.intrusive {
    class visitor.examples.intrusive.Demo {
        {static} + main()
    }
  }
  

  namespace visitor.examples.intrusive {
    class visitor.examples.intrusive.DoubleExpression {
        - value : double
        + DoubleExpression()
        + print()
    }
  }
  

  namespace visitor.examples.intrusive {
    abstract class visitor.examples.intrusive.Expression {
        {abstract} + print()
    }
  }
  

  visitor.examples.intrusive.AdditionExpression -up-|> visitor.examples.intrusive.Expression
  visitor.examples.intrusive.AdditionExpression o-- visitor.examples.intrusive.Expression : left
  visitor.examples.intrusive.AdditionExpression o-- visitor.examples.intrusive.Expression : right
  visitor.examples.intrusive.DoubleExpression -up-|> visitor.examples.intrusive.Expression


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
